--- a/ethmusicui/package.json
+++ b/ethmusicui/package.json
@@ -7,7 +7,9 @@
     "react-dom": "^15.6.0"
   },
   "devDependencies": {
-    "react-scripts": "1.0.7"
+    "react-scripts": "1.0.7",
+    "web3": "^0.19.0",
+    "lodash": "^4.17.4"
   },
   "scripts": {
     "start": "react-scripts start",
